Add suicide awareness page

--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
               <p class="description">More information coming soon. Subscribe to our newsletter and follow our social media to get notified of any updates!</p>
             </div>
             <div class="text-center">
-              <a href="#footer" class="basic-btn">Subscribe</a><a href="connect" class="yellow-btn">Get Involved</a>
+              <a href="#footer" class="basic-btn">Subscribe</a><a href="suicide-awareness" class="yellow-btn">Project Info</a>
             </div>
           </div>
         </div>
