--- a/suicide-awareness.html
+++ b/suicide-awareness.html
@@ -20,8 +20,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Transformance Art | Home</title>
-	<meta name="description" content="Empowering innovative arts initiatives that promote hope, healing, and restoration, both individually and collectively, through the transformative power of performance arts experiences.">  
+  <title>Transformance Art | Strength and Survival: Creative Expressions of Overcoming Suicide and Loss</title>
+	<meta name="description" content="Discover the healing power of music, dance, painting, and poetry. Our curated artistic experience features original works by transformance artists and local community contributors, offering hope and restoration for those navigating life's challenges.">  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -61,7 +61,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center header-transparent">
+  <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
@@ -70,9 +70,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active" href="/">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="about">About</a></li>
-          <li><a href="projects">Projects</a></li>
+          <li><a class="active" href="projects">Projects</a></li>
           <li><a href="connect">Connect</a></li>
           <li><a href="https://givebutter.com/XNQDfZ" target="_blank" class="btn-get-started">Donate</a></li>
         </ul>
@@ -82,110 +82,21 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex justify-cntent-center align-items-center">
-    <video autoplay muted loop id="myVideo">
-      <source src="assets/img/hero-bg.mp4" type="video/mp4">
-    </video>
-    <div class="container text-center">
-      <h2 class="animate__animated animate__fadeInDown">Transformation Through Artistic Expression</h2>
-      <p class="animate__animated animate__fadeInUp">Transformance artists build bridges through music and art - creating a world where artistic expression will act as a powerful catalyst for personal and societal transformation.</p>
-      <a href="#about" class="btn-get-started animate__animated animate__fadeInUp">Learn More</a>
-    </div>
-  </section><!-- End Hero -->
-
   <main id="main">
-    <section id="about" class="features">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Who We Are</h2>
-          <p class="lead"><span>Transformance Art</span> is dedicated to empowering innovative arts initiatives that promote hope, healing,
-            and restoration, both individually and collectively, through the transformative power of
-            performance arts experiences.</p>
-          <a href="about" class="basic-btn">Read More</a>
-        </div>
-      </div>
-    </section>
     <!-- ======= Why Us Section ======= -->
-    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
-      <div class="section-title text-white">
-        <h2>Projects</h2>
-      </div>
+    <section data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-6 bg-darkblue">
-            <img src="assets/img/meraki-projects.png" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-6 d-flex flex-column justify-content-center p-5 project-info">
-            <p>
-              Meraki [may-rah-kee] is a Greek word that means "to do something with soul, creativity, or love; to put something of yourself in your work".
-            </p>
-            <p>
-              The Meraki Projects will be a series of expressive artistic experiences that will promote hope, healing, and restoration. Each project will have a specific focus with the goal of bringing the experiences to cities around the world. The first project will focus on suicide awareness.
-            </p>
-            <hr>
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-calendar"></i></div>
-              <h3 class="title">Strength and Survival: Creative Expressions of Overcoming Suicide and Loss</h3>
-              <p class="description">More information coming soon. Subscribe to our newsletter and follow our social media to get notified of any updates!</p>
-            </div>
-            <div class="text-center">
-              <a href="projects" class="basic-btn">View All Projects</a><a href="suicide-awareness" class="yellow-btn">Project Info</a>
-            </div>
-          </div>
-        </div>
-
+        <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+         <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+           src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGKaoiFuSc&#x2F;ngY9w17AEFN0gkLD2hVocQ&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+         </iframe>
+       </div>
+       <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGKaoiFuSc&#x2F;ngY9w17AEFN0gkLD2hVocQ&#x2F;view?utm_content=DAGKaoiFuSc&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">
       </div>
+      
     </section><!-- End Why Us Section -->
-    
-    <section class="contact" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
-      <div class="section-title">
-        <h2>Connect</h2>
-        <p class="lead"><span>Interested in getting involved or have questions about what we do?</p>
-        <p class="lead mt-3"><span><i class="bx bx-map"></i>Located in Knoxville, TN</p>
-      </div>
-      <div class="container">
-
-        <div class="row">
-
-          <div class="col-lg-12">
-            <form action="https://formspree.io/f/xayrgdpo" method="POST" class="email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <select class="form-control form-select" name="contactreason" id="contactreason" required="" aria-label="Reason for Contact">
-                  <option value="" selected="" disabled="">Select the Reason for Contact</option>
-                  <option value="General Questions">General Questions</option>
-                  <option value="Get Involved">Get Involved</option>
-                  <option value="Sponsoring">Sponsoring</option>
-                  <option value="Partnership">Partnership</option>
-                </select>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="form-check mt-2">
-                <input class="form-check-input" type="checkbox" value="" id="_optin" name="_optin" checked>
-                <label class="form-check-label" for="_optin">
-                  Subscribe to our newsletter
-                </label>
-              </div>
-              <div class="text-center mt-4"><button type="submit" class="basic-btn">Submit</button></div>
-            </form>
-          </div>
-
-        </div>
-
-      </div>
-    </section>
 
   </main><!-- End #main -->
 
