--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
     </section>
     <!-- ======= Why Us Section ======= -->
-    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+    <section class="why-us projects-bg" data-aos="fade-up" date-aos-delay="200">
       <div class="section-title text-white">
         <h2>Projects</h2>
       </div>
