--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
 
   <main id="main">
     <!-- ======= Why Us Section ======= -->
-    <section class="why-us section-bg" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+    <section class="why-us projects-bg" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
       <div class="section-title text-white">
         <h2>Projects</h2>
       </div>
