--- a/suicide-awareness.html
+++ b/suicide-awareness.html
@@ -87,14 +87,13 @@
     <section data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
       <div class="container">
         <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
-        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-        border-radius: 8px; will-change: transform;">
-         <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-           src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGKaoiFuSc&#x2F;ngY9w17AEFN0gkLD2hVocQ&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-         </iframe>
-       </div>
-      </div>
-      
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGKaoiFuSc&#x2F;0SRkKopwgrM5XoEAKvfT7w&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+</div>
     </section><!-- End Why Us Section -->
 
   </main><!-- End #main -->
