--- a/connect.html
+++ b/connect.html
@@ -73,6 +73,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="about">About</a></li>
           <li><a href="projects">Projects</a></li>
+          <li><a href="events">Events</a></li>
           <li><a class="active" href="connect">Connect</a></li>
           <li><a href="https://givebutter.com/XNQDfZ" target="_blank" class="btn-get-started">Donate</a></li>
         </ul>
