--- a/projects.html
+++ b/projects.html
@@ -73,6 +73,7 @@
           <li><a class="active " href="/">Home</a></li>
           <li><a href="about">About</a></li>
           <li><a class="active" href="projects">Projects</a></li>
+          <li><a href="events">Events</a></li>
           <li><a href="connect">Connect</a></li>
           <li><a href="https://givebutter.com/XNQDfZ" target="_blank" class="btn-get-started">Donate</a></li>
         </ul>
@@ -83,7 +84,6 @@
   </header><!-- End Header -->
 
   <main id="main">
-    <!-- ======= Why Us Section ======= -->
     <section class="why-us projects-bg" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
       <div class="section-title text-white">
         <h2>Projects</h2>
@@ -114,32 +114,7 @@
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
-
-    <!-- ======= Service Details Section ======= -->
-    <section class="service-details">
-      <div class="section-title">
-        <h2>Past Projects</h2>
-      </div>
-      <div class="container">
-
-        <div class="row">
-          <div class="col-md-6 offset-md-3 d-flex align-items-stretch" data-aos="fade-up">
-            <div class="card">
-              <div class="card-img">
-                <img src="assets/img/nuevo-tango.png" alt="Nuevo Tango Event">
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">Nuevo Tango | April 16, 2023</h5>
-                <p class="card-text">A celebration of the Tango-inspired compositions of the exceptional Argentinian composer, Astor Piazzolla. Participants were immersed in an evening of beautiful Chamber Music, Tango dances accompanied by live music, and a Social Dance Party. This was truly a one-of-a-kind Chamber Music concert, where two art forms collided to create an experience unlike any other.</p>
-                <p class="card-text">The proceeds of this event covered the expenses for all the necessary filings to become a 501(c)(3) nonprofit recognized by the IRS!</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Service Details Section -->
+    </section>
 
   </main><!-- End #main -->
 
