--- a/events.html
+++ b/events.html
@@ -108,7 +108,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/Bridgerton_Soiree_Portrait.png" class="img-fluid" alt="">
+            <img src="assets/img/Bridgerton_Soiree_Portrait.png" class="img-fluid" alt="" style="box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);">
+            <div class="text-center d-flex align-items-center justify-content-center partnership-row">
+              <a href="https://marblecityballroom.com" target="_blank" class="mx-4 my-4"><img src="assets/img/mcb_logo.png" style="max-width: 80px;"></a>
+              <p>In partnership with <a href="https://marblecityballroom.com" target="_blank">Marble City Ballroom</a></p>
+            </div>
           </div>
           <div class="col-lg-6">
             <div class="container" style="border: black 5px double; padding: 1em;">
