Add Sponsorship link

--- a/events.html
+++ b/events.html
@@ -137,7 +137,7 @@
               <p>
                 Secure your invitation posthaste, for this is an affair not to be missed. Let it be known that your presence at the Bridgerton Soirée shall be the talk of the ton, and a beacon of light in the darkness.
               </p>
-              <a href="https://www.eventbrite.com/e/bridgerton-soiree-tickets-1006192778687" target="_blank" class="yellow-btn">Buy Tickets</a>
+              <a href="https://transformanceart.org/bridgertonsoireesponsor" target="_blank" class="basic-btn">Sponsor</a><a href="https://www.eventbrite.com/e/bridgerton-soiree-tickets-1006192778687" target="_blank" class="yellow-btn">Buy Tickets</a>
             </div>
           </div>
         </div>
