--- a/events.html
+++ b/events.html
@@ -11,6 +11,16 @@
 
   gtag('config', 'G-37TFM1HMNT');
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16650422066">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16650422066');
+</script>
 <script
   async
   src="https://widgets.givebutter.com/latest.umd.cjs?acct=iADcdCcoD9kE0QJm&p=other"
