--- a/events.html
+++ b/events.html
@@ -21,6 +21,23 @@
 
   gtag('config', 'AW-16650422066');
 </script>
+<script>
+  function gtag_report_conversion(url) {
+    var callback = function () {
+      if (typeof(url) != 'undefined') {
+        window.location = url;
+      }
+    };
+    gtag('event', 'conversion', {
+        'send_to': 'AW-16650422066/7wDxCKDiodIZELKOxYM-',
+        'value': 1.0,
+        'currency': 'USD',
+        'event_callback': callback
+    });
+    return false;
+  }
+  </script>
+  
 <script
   async
   src="https://widgets.givebutter.com/latest.umd.cjs?acct=iADcdCcoD9kE0QJm&p=other"
@@ -147,7 +164,7 @@
               <p>
                 Secure your invitation posthaste, for this is an affair not to be missed. Let it be known that your presence at the Bridgerton Soirée shall be the talk of the ton, and a beacon of light in the darkness.
               </p>
-              <a href="https://transformanceart.org/bridgertonsoireesponsor" target="_blank" class="basic-btn">Sponsor</a><a href="https://www.eventbrite.com/e/bridgerton-soiree-tickets-1006192778687" target="_blank" class="yellow-btn">Buy Tickets</a>
+              <a href="https://transformanceart.org/bridgertonsoireesponsor" target="_blank" class="basic-btn">Sponsor</a><a href="https://www.eventbrite.com/e/bridgerton-soiree-tickets-1006192778687" target="_blank" class="yellow-btn" onclick="gtag_report_conversion()">Buy Tickets</a>
             </div>
           </div>
         </div>
