--- a/events.html
+++ b/events.html
@@ -221,7 +221,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">any attendees under the age of 18 mustbe accompanied by a parent or legal guardian. You must be 21 or older to consume alcoholic beverages. Please bring a valid ID.</div>
+                  <div class="accordion-body">Any attendees under the age of 18 must be accompanied by a parent or legal guardian. You must be 21 or older to consume alcoholic beverages. Please bring a valid ID.</div>
                 </div>
               </div>
               <div class="accordion-item">
