--- a/events.html
+++ b/events.html
@@ -174,28 +174,52 @@
             <h3>
               Features:
             </h3>
-            <br>
             <ul>
               <li>
                 <b>Regency Splendor:</b> Immerse yourself in the elegance of the early 19th century with period attire and décor
               </li>
               <li>
-                <b>Dance the Night Away:</b> Learn the steps and twirl across the dance floor to enchanting music
+                <b>Dance the Night Away:</b> Learn the steps to a Bridgerton-inspired dance, taught by Marble City Ballroom, and twirl across the dance floor to enchanting music
               </li>
               <li>
-                <b>Exclusive VIP Experience:</b> Enjoy a delectable pre-soirée dinner and early access for VIP guests
-              </li>
-              <li>
-                <b>Signature Cocktails:</b> Sip on specially crafted Bridgerton-inspired drinks
+                <b>Signature Cocktails:</b> Sip on specially crafted Bridgerton-inspired drinks at the cash bar
               </li>
               <li>
                 <b>Enchanting Music:</b> Enjoy the modern spin on Regency-era music that is featured in the Bridgerton TV series
               </li>
               <li>
-                <b>Performances:</b> Be entertained by live performances throughout the evening
+                <b>Performances:</b> Be entertained by live music and dance performances throughout the evening
+              </li>
+              <li>
+                <b>Photo Ops:</b> There is a dedicated photo area, but the entire event will be full of photo ops - ensuring you have every opportunity to capture beautiful moments!
+              </li>
+              <li>
+                <b>Silent Auction:</b> Participate in a silent auction - with proceeds benefiting a worthy cause and some very exciting items to bid on (just in time for Christmas!)
               </li>
               <li>
                 <b>Support a Worthy Cause:</b>  Proceeds benefit Transformance Art's Meraki Project, promoting mental health awareness and healing through the arts
+              </li>
+            </ul>
+            <h3>
+              VIP Experience:
+            </h3>
+            <ul>
+              <li>
+                Enjoy a delectable pre-soirée dinner and drinks (starting at 5:30pm)
+              </li>
+              <li>
+                Exclusive live music performances provided by:
+                <ul>
+                  <li>
+                    <b>Smoky String Quartet:</b> Euclides Andrade, Violin; Fresly Umana, Violin; Jackson Howard, Viola; Micah Taylor, Cello
+                  </li>
+                  <li>
+                    <b>Flute Duo:</b> <a href="https://flutifulusa.com/" target="_blank">Sherbie Hampson</a> & Julie Arnold
+                  </li>
+                  <li>
+                    <b>Harpist:</b> <a href="https://megankabelaharpist.com/index.htm" target="_blank">Megan Kabela</a>
+                  </li>
+                </ul>
               </li>
             </ul>
           </div>
@@ -231,7 +255,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">General admission includes access to the ball, dance lesson, and entertainment. VIP tickets include an exclusive pre-soirée dinner and early access.</div>
+                  <div class="accordion-body">General admission includes access to the ball, dance lesson, silent auction, light hors d'oeuvres, drinks, and entertainment (including live music and dance performances). VIP tickets include a pre-soirée dinner, drinks, exclusive live performances, and early access.</div>
                 </div>
               </div>
               <div class="accordion-item">
@@ -261,7 +285,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Delightful sweets and a charcuterie board will be provided for all guests to enjoy. VIP guests will also be treated to an exclusive pre-soirée dinner at 6:00 pm.</div>
+                  <div class="accordion-body">Delightful sweets and a charcuterie board will be provided for all guests to enjoy. VIP guests will also be treated to an exclusive pre-soirée dinner at 5:30 pm.</div>
                 </div>
               </div>
               <div class="accordion-item">
