--- a/events.html
+++ b/events.html
@@ -135,7 +135,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/Bridgerton_Soiree_Portrait.png" class="img-fluid" alt="" style="box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);">
+            <img src="assets/img/RegencySoiree.png" class="img-fluid" alt="" style="box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);">
             <div class="text-center d-flex align-items-center justify-content-center partnership-row">
               <a href="https://marblecityballroom.com" target="_blank" class="mx-4 my-4"><img src="assets/img/mcb_logo.png" style="max-width: 80px;"></a>
               <p>In partnership with <a href="https://marblecityballroom.com" target="_blank">Marble City Ballroom</a></p>
@@ -150,7 +150,7 @@
                 Dearest reader,
               </p>
               <p>
-                The social season is upon us, and whispers of an extraordinary event have reached my ears. Prepare to be captivated, for a Bridgerton Soirée of unparalleled grandeur awaits!
+                The social season is upon us, and whispers of an extraordinary event have reached my ears. Prepare to be captivated, for a soirée of unparalleled grandeur awaits!
               </p>
               <p>
                 Dust off your finest attire, for this is an occasion to showcase your most exquisite period garb.
@@ -162,7 +162,7 @@
                 Remember, dear reader, this soirée is not merely an opportunity to revel in the splendor of the era. It is a compassionate endeavor, a hand outstretched to those navigating the complexities of mental health. Your presence at this enchanting evening will directly contribute to the development of Transformance Art's upcoming Meraki Project, "Strength and Survival: Creative Expressions of Overcoming Suicide and Loss." Together, we shall cultivate an artistic haven where hope flickers, healing blossoms, and resilience takes root; a sanctuary for those touched by the shadows of depression, the weight of loss, and the journey towards recovery.
               </p>
               <p>
-                Secure your invitation posthaste, for this is an affair not to be missed. Let it be known that your presence at the Bridgerton Soirée shall be the talk of the ton, and a beacon of light in the darkness.
+                Secure your invitation posthaste, for this is an affair not to be missed. Let it be known that your presence at the Regency Soirée shall be the talk of the ton, and a beacon of light in the darkness.
               </p>
               <a href="https://www.eventbrite.com/e/regency-soiree-tickets-1006192778687" target="_blank" class="yellow-btn" onclick="gtag_report_conversion()">Buy Tickets</a>
             </div>
