--- a/events.html
+++ b/events.html
@@ -156,7 +156,7 @@
                 Dust off your finest attire, for this is an occasion to showcase your most exquisite period garb.
               </p>
               <p>
-                A dance lesson shall commence the festivities, ensuring even the most hesitant wallflower blossoms into a graceful swan upon the dance floor. As the night unfolds, enjoy a cash bar complete with two Signature Bridgerton Drinks, modernized Regency-era music, performances, and more!
+                A dance lesson shall commence the festivities, ensuring even the most hesitant wallflower blossoms into a graceful swan upon the dance floor. As the night unfolds, enjoy a cash bar complete with two Signature Drinks, modernized Regency-era music, performances, and more!
               </p>
               <p>
                 Remember, dear reader, this soirée is not merely an opportunity to revel in the splendor of the era. It is a compassionate endeavor, a hand outstretched to those navigating the complexities of mental health. Your presence at this enchanting evening will directly contribute to the development of Transformance Art's upcoming Meraki Project, "Strength and Survival: Creative Expressions of Overcoming Suicide and Loss." Together, we shall cultivate an artistic haven where hope flickers, healing blossoms, and resilience takes root; a sanctuary for those touched by the shadows of depression, the weight of loss, and the journey towards recovery.
